--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>net.vakilla</groupId>
     <artifactId>auto-async</artifactId>
     <version>1.0.0</version>
+    <packaging>jar</packaging>
 
     <name>${project.artifactId}</name>
     <description>A Library to generate async interface</description>
